<resources>
    <string name="app_name" translatable="false">PtsAdm</string>

    <string name="patients" translatable="false">Patients</string>
    <string name="appointments" translatable="false">Appointments</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="me" translatable="false">Me</string>

    <string name="day1">Mon</string>
    <string name="day2">Tue</string>
    <string name="day3">Wed</string>
    <string name="day4">Thu</string>
    <string name="day5">Fri</string>
    <string name="day6">Sat</string>
    <string name="day7">Sun</string>

    <plurals name="countEvents">
        <item quantity="one">%1$d event</item>
        <item quantity="other">%1$d events</item>
    </plurals>

    <string name="error_token_expired">Session expired. Re login, please</string>

    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="not_have_an_account">Not have an account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_login_required">Login is required field</string>
    <string name="error_password_required">Password is required field</string>

    <string name="new_appointment_title">New appointment</string>
    <string name="new_appointment_patient_data_hint">Start typing phone number or name</string>
    <string name="set_visit_datetime_hint">Set visit datetime</string>
    <string name="select_patient">Select Patient</string>

    <string name="delete_appointment_dialog_title">Delete appointment</string>
    <string name="delete_appointment_dialog_message">Are you sure to delete this appointment?</string>

    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="call_to_patient_dialog_title">Call patient</string>
    <string name="call_dialog_message">Call to %1$s (%2$s)?</string>


    <string name="retry">Retry</string>
    <string name="offline_dialog_title">You are offline</string>
    <string name="check_internet_dialog_message">Check your internet connection and try again</string>

    <string name="delete_patient_dialog_title">Delete patient?</string>
    <string name="delete_patient_dialog_message">This action will remove patient %1$s with all appointments (It can\'t be canceled).</string>

    <string name="appointments_log">Appointments log</string>
    <string name="no_appointments_text">No appointments found for this patient</string>
</resources>
